plugins {
    id 'application'
    id 'org.graalvm.buildtools.native' version '0.10.1'
}

repositories {
    mavenCentral()
}

dependencies {
    // No dependencies needed
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(24)
    }
}

application {
    mainClass = 'shell.Victim'
}

graalvmNative {
    binaries {
        configureEach {
            classpath = files(tasks.named('jar'), configurations.runtimeClasspath)

            buildArgs.add('--no-fallback')
            buildArgs.add('-H:+AddAllCharsets')
            buildArgs.add('-H:IncludeResources=.*data\\.dat$')
            buildArgs.add('--enable-native-access=ALL-UNNAMED')
        }

        register("victim") {
            mainClass = 'shell.Victim'
            imageName = 'victim'
            buildArgs.add('-H:+StaticExecutableWithDynamicLibC')
        }
    }
}
